--- a/index.html
+++ b/index.html
@@ -1,37 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" >
-	<meta name="author" content="Seasand-yyh">
-	<meta name="description" content="Seasand-yyh's Blog">
-	<meta http-equiv="keywords" content="Seasand-yyh's Blog">
-	<title>琅嬛福地</title>
-	<link type="image/x-icon" rel="shortcut icon" href="./favicon.ico">
-	<link type="image/x-icon" rel="icon" href="./favicon.ico">
-	<link rel="stylesheet" type="text/css" href="./css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="./css/monokai-sublime.css">
-	<link rel="stylesheet" type="text/css" href="./css/app.css">
-	<script type="text/javascript" src="./js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="./js/marked.js"></script>
-	<script type="text/javascript" src="./js/highlight.pack.js"></script>
-	<script type="text/javascript" src="./js/app.js"></script>
-	<script type="text/javascript">
-		$(function() {
-			app.init();
-		});
-	</script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" >
+  <meta name="author" content="Seasand-yyh">
+  <meta name="description" content="QNote">
+  <meta http-equiv="keywords" content="QNote">
+  <title>琅嬛福地</title>
+  <link type="image/x-icon" rel="shortcut icon" href="./favicon.ico">
+  <link type="image/x-icon" rel="icon" href="./favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="./css/monokai-sublime.css">
+  <link rel="stylesheet" type="text/css" href="./css/bootstrap-3.3.5.min.css">
+  <link rel="stylesheet" type="text/css" href="./css/app.css">
+  <script type="text/javascript" src="./js/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="./js/marked.js"></script>
+  <script type="text/javascript" src="./js/highlight.pack.js"></script>
+  <script type="text/javascript" src="./js/bootstrap-3.3.5.min.js"></script>
+  <script type="text/javascript" src="./js/app.js"></script>
+  <script type="text/javascript">
+    $(function() {
+      app.init();
+    });
+  </script>
 </head>
-<body class="scrollbar">
-	<nav id="nav_bar">
-		<span id="nav_category">&#8801;</span>
-		<span id="nav_title">琅&nbsp;嬛&nbsp;福&nbsp;地</span>
-	</nav>
-	<div id="main">
-		<div id="side_bar" class="scrollbar"></div>
-		<div id="content" class="scrollbar"></div>
-	</div>
-	<div id="back_to_top" title="back to top">&#8679;</div>
+<body>
+  <div id="wrapper">
+    <!-- sidebar start -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper">
+      <div class="sidebar-brand"><a href="#">琅嬛福地</a></div>
+      <ul class="nav sidebar-nav"></ul>
+    </nav>
+    <!-- sidebar end -->
+    <!-- page content start -->
+    <div id="page-content-wrapper">
+      <button type="button" class="hamburger is-closed animated" id="trigger">
+        <span class="hamb-top"></span>
+        <span class="hamb-middle"></span>
+        <span class="hamb-bottom"></span>
+      </button>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9 col-lg-offset-1">
+            <a id="page-content-top" style="width:0;height:0;"></a>
+            <div id="page-content"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- page content end -->
+  </div>
 </body>
 </html>
