--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="./favicon.ico">
   <link type="image/x-icon" rel="icon" href="./favicon.ico">
   <link rel="stylesheet" type="text/css" href="./css/index.css">
+  <script type="text/javascript" src="./assets/jquery-1.11.0/jquery.min.js"></script>
   <script type="text/javascript" src="./js/index.js"></script>
   <script type="text/javascript">
     $(function() {
