--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <title>瑯環福地</title>
   <link type="image/x-icon" rel="shortcut icon" href="./favicon.ico">
   <link type="image/x-icon" rel="icon" href="./favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./assets/bootstrap-3.3.7-dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./css/index.css">
   <script type="text/javascript" src="./assets/jquery-1.11.0/jquery.min.js"></script>
+  <script type="text/javascript" src="./assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="./js/index.js"></script>
   <script type="text/javascript">
     $(function() {
