【feat】 add marked.js and highlight.js

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
   <link type="image/x-icon" rel="shortcut icon" href="./favicon.ico">
   <link type="image/x-icon" rel="icon" href="./favicon.ico">
   <link rel="stylesheet" type="text/css" href="./assets/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/highlight/css/monokai-sublime.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/highlight/css/highlightjs-line-numbers.min.css">
   <link rel="stylesheet" type="text/css" href="./css/index.css">
   <script type="text/javascript" src="./assets/jquery-1.11.0/jquery.min.js"></script>
   <script type="text/javascript" src="./assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="./assets/marked/marked.min.js"></script>
+  <script type="text/javascript" src="./assets/highlight/js/highlight.min.js"></script>
+  <script type="text/javascript" src="./assets/highlight/js/highlightjs-line-numbers.min.js"></script>
   <script type="text/javascript" src="./js/index.js"></script>
   <script type="text/javascript">
     $(function() {
