--- a/index.html
+++ b/index.html
@@ -27,59 +27,95 @@
   </script>
 </head>
 <body>
-  <div class="sea-wrapper">
-    <header class="navbar navbar-static-top navbar-fixed-top sea-header">
-      <div class="container-fluid sea-navbar">
-        <div class="navbar-header col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <a class="navbar-brand sea-logo" href="#" title="琅嬛福地">
-            <span class="sea-title">琅嬛福地</span>
+  <div class="blog-wrapper">
+    <header class="navbar navbar-static-top navbar-fixed-top blog-header" role="banner">
+      <div class="container-fluid blog-header-area">
+        <div class="navbar-header col-xs-12 col-sm-12 col-md-10 col-lg-10">
+          <div class="btn-group dropdown-menu-right pull-right blog-slidebar visible-xs-inline-block visible-sm-inline-block">
+            <a class="blog-menubar" href="javascript:void(0);" data-toggle="dropdown" aria-expanded="false">
+              <i class="glyphicon glyphicon-menu-hamburger"></i>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="javascript:void(0);" title="Account"><i class="glyphicon glyphicon-user"></i>&nbsp;Account</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="javascript:void(0);" title="Bookmark"><i class="glyphicon glyphicon-tags"></i>&nbsp;Bookmark</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="javascript:void(0);" title="Settings"><i class="glyphicon glyphicon-cog"></i>&nbsp;Settings</a></li>
+            </ul>
+          </div>
+          <a class="navbar-brand blog-logo" href="#" title="琅嬛福地">
+            <span class="blog-title">琅嬛福地</span>
           </a>
           <nav class="collapse navbar-collapse">
-            <a class="pull-right sea-catalog" href="#" title="目录分类">
-              <i class="glyphicon glyphicon-th-large"></i>
-            </a>
-            <div class="sea-searchbar pull-right">
+            <div class="blog-searchbar pull-right">
               <form class="form-inline">
                 <div class="input-group">
                   <input class="form-control" type="text" name="keywords" placeholder="Search for ...">
-                  <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">
-                      &nbsp;<i class="glyphicon glyphicon-search"></i>&nbsp;
-                    </button>
+                  <span class="input-group-addon" style="cursor: pointer;" onclick="search();">
+                    &nbsp;<i class="glyphicon glyphicon-search"></i>&nbsp;
                   </span>
                 </div>
               </form>
             </div>
           </nav>
         </div>
+        <nav class="navbar-collapse blog-header-opt hidden-xs hidden-sm" role="navigation">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="javascript:void(0);" title="Account"><i class="glyphicon glyphicon-user"></i>&nbsp;Account</a></li>
+            <li><a href="javascript:void(0);" title="Settings"><i class="glyphicon glyphicon-cog"></i>&nbsp;Settings</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
-    <div class="container-fluid sea-body">
-      <div id="cat-page" class="row">
-        <div class="hidden-xs col-sm-2 col-md-2 col-lg-2 sea-sidebar">
-          <div class="panel panel-default sea-cat-index">
-            <div class="panel-heading">
-              <h3 class="panel-title">
-                <i class="glyphicon glyphicon-list"></i>&nbsp;分类索引
-              </h3>
+    <div class="container-fluid blog-body">
+      <div id="idx-page">
+        <div class="row blog-search-area visible-xs">
+          <form>
+            <div class="input-group input-group-lg">
+              <input class="form-control" type="text" name="keywords" placeholder="Search for ...">
+              <span class="input-group-addon" style="cursor: pointer;" onclick="search();">
+                &nbsp;<i class="glyphicon glyphicon-search"></i>&nbsp;
+              </span>
             </div>
-            <div class="panel-body sea-cat-index-wrapper">
-              <ul id="sidebar-area"></ul>
+          </form>
+        </div>
+        <div class="row blog-filter-area">
+          <div id="cate-area" class="help-block blog-filter-item">
+            <span class="text-muted">分类：</span>
+            <a class="blog-filter-link active" href="javascript:void(0);" cateId="all" title="全部" onclick="cate_view_handler(this);">全部</a>
+          </div>
+          <div id="tags-area" class="help-block blog-filter-item">
+            <span class="text-muted">标签：</span>
+            <a class="blog-filter-link active" href="javascript:void(0);" tagId="all" title="全部" onclick="tags_view_handler(this);">全部</a>
+          </div>
+        </div>
+        <div class="row blog-article-area col-xs-12 col-sm-12 col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title"><i class="glyphicon glyphicon-th"></i>&nbsp;文章列表</h3>
+            </div>
+            <div id="docs-area" class="panel-body blog-article-list">
+
             </div>
           </div>
         </div>
-        <div id="main-area" class="col-xs-12 col-sm-10 col-md-10 col-lg-10 sea-content">
-
-        </div>
       </div>
-      <div id="ctx-page" class="row">
-        <div id="context-area" class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 sea-context">
+      <div id="ctx-page" style="display: none;">
+        <div id="ctx-area" class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 blog-context-area">
 
         </div>
       </div>
     </div>
-    <div class="sea-backtop" title="Back to Top" onclick="back_to_top();">
-      <i class="glyphicon glyphicon-arrow-up"></i>
+    <div class="container-fluid text-center blog-footer">
+      <span>琅嬛福地 ● Seasand-yyh&copy;2017-2022</span>
+    </div>
+    <div class="blog-attach-area">
+      <div id="btn-return-idx" class="blog-attach-btn" title="Return Index" onclick="return_index();" style="display: none;">
+        <i class="glyphicon glyphicon-share-alt"></i>
+      </div>
+      <div id="btn-back-top" class="blog-attach-btn" title="Back to Top" onclick="back_to_top();">
+        <i class="glyphicon glyphicon-arrow-up"></i>
+      </div>
     </div>
   </div>
 </body>
